[package]
name = "h0l0_img_host"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.28.0"
rand = "0.8.5"
chrono = "0.4.20"
sha2 = "0.10.2"

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]
